--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Stylesheet -->
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <title>Document</title>
-</head>
-
-<body>
-  <!-- calculator-->
-  <div class="calculator">
-    <!-- display-->
-    <div class="calculator-display">
-      <h1>0</h1>
-    </div>
-    <!-- buttons-->
-    <div class="calculator-buttons">
+<!-- Calculator -->
+<div class="calculator">
+  <!-- Display -->
+  <div class="calculator-display">
+    <h1>0</h1>
+  </div>
+  <!-- Buttons -->
+  <div class="calculator-buttons">
     <button class="operator" value="+">+</button>
     <button class="operator" value="-">-</button>
-    <button class="operator" value="*">*</button>
-    <button class="operator" value="/">/</button>
+    <button class="operator" value="*">×</button>
+    <button class="operator" value="/">÷</button>
     <button value="7">7</button>
     <button value="8">8</button>
     <button value="9">9</button>
@@ -35,9 +23,5 @@
     <button value="0">0</button>
     <button class="clear" id="clear-btn">C</button>
     <button class="equal-sign operator" value="=">=</button>
-    </div>
   </div>
-    <script src="assets/js/index.js"></script>
-</body>
-
-</html>
+</div>
